--- a/app/src/main/res/layout/popup_todolist.xml
+++ b/app/src/main/res/layout/popup_todolist.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:onClick="onAddCustomTodo"
-        android:text="@string/custom"
+        android:text="@string/customToDo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
