--- a/app/src/main/res/layout/view_qr_list_items.xml
+++ b/app/src/main/res/layout/view_qr_list_items.xml
@@ -55,7 +55,6 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/border_solid"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/ivQrCode"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,16 +62,16 @@
 
         <ImageView
             android:id="@+id/ivEditQr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
 
         <ImageView
             android:id="@+id/ivDeleteQr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_delete_black_24dp" />
