--- a/app/src/main/res/layout/view_qr_scanned_item.xml
+++ b/app/src/main/res/layout/view_qr_scanned_item.xml
@@ -74,8 +74,8 @@
 
     <ImageView
         android:id="@+id/ivDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
