--- a/app/src/main/res/layout/view_todolist_item.xml
+++ b/app/src/main/res/layout/view_todolist_item.xml
@@ -8,19 +8,16 @@
 
     <ImageView
         android:id="@+id/ivDoneToDo"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/border_solid"
-        android:visibility="invisible"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintEnd_toStartOf="@+id/tvTitleToDo"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_check_green_24dp"
         tools:visibility="visible" />
 
     <TextView
@@ -29,7 +26,6 @@
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/border_solid"
         android:gravity="center"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -46,7 +42,6 @@
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/border_solid"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -54,17 +49,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/ivInfoQr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_info_blue_24dp" />
-
-        <ImageView
             android:id="@+id/ivEditQr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_weight="1"
@@ -72,8 +59,8 @@
 
         <ImageView
             android:id="@+id/ivDeleteQr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_delete_black_24dp" />
@@ -81,12 +68,10 @@
 
     <View
         android:id="@+id/dividerToDo"
-        android:layout_width="395dp"
-        android:layout_height="3dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="#673AB7"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/div"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleToDo" />
