--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#F44336</color>
-    <color name="colorPrimaryDark">#A82F26</color>
-    <color name="colorAccent">#DA9D03</color>
+    <color name="colorPrimaryDark">#B31300</color>
+    <color name="colorAccent">#2D7FD6</color>
+    <color name="div">#6C6C6C</color>
 </resources>
