--- a/app/src/main/res/layout/view_calendar_list_item.xml
+++ b/app/src/main/res/layout/view_calendar_list_item.xml
@@ -6,22 +6,17 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView25"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvTitelCal"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="@string/title"
-        app:layout_constraintBottom_toBottomOf="@+id/tvTitelCal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvTitelCal" />
-
-    <TextView
-        android:id="@+id/tvTitelCal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:textSize="@dimen/text_size"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="@+id/textView28"
-        app:layout_constraintStart_toEndOf="@+id/textView25"
+        app:layout_constraintEnd_toStartOf="@+id/textView29"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView29"
         tools:text="@string/title" />
 
@@ -29,9 +24,9 @@
         android:id="@+id/tvStartDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView29"
-        app:layout_constraintStart_toEndOf="@+id/textView29"
+        app:layout_constraintEnd_toStartOf="@+id/ivDeleteEvent"
         app:layout_constraintTop_toTopOf="@+id/textView29"
         tools:text="12.05.2019 12:30" />
 
@@ -49,10 +44,10 @@
         android:id="@+id/textView29"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:text="@string/start"
-        app:layout_constraintStart_toEndOf="@+id/tvTitelCal"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/tvStartDate"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -68,8 +63,8 @@
 
     <ImageView
         android:id="@+id/ivDeleteEvent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
